# fba-pomdp

./: .clang-format  .cppcheck.suppressions  .doxygen.config  .gitignore  CMakeLists.txt  README.md
analysis/: README.md
analysis/plotting/: plot_bapomdp_end_performance.py  plot_bapomdp_learning.py  plot_planning_results.py
analysis/plotting/example/: 1.res  command.sh  files.txt  labels.txt
analysis/preprocess/: merge_result_files.py
analysis/preprocess/example/: 2.res  command.sh  merged_results.txt
includes/: catch.hpp
profiling/bapomcp_episodic_tiger/: callgrind.out.exp  callgrind.out.orig  command.sh
profiling/pomcp_episodic_tiger/: 8192_half_callgrind.out.25466  8192_orig.callgrind.out.18969  8192_table_callgrind.out.19023  command.sh  half_table_callgrind.out.20240  orig_callgrind.out.18417  table_callgrind.out.18764
profiling/sample_dirichlet_static/: callgrind.out.orig_exp  callgrind.out.orig_reg  callgrind.out.static_exp  callgrind.out.static_reg  command.sh
singularity/: singu_temp.def
src/: .ycm_extra_conf.py  bapomdp.cpp  fbapomdp.cpp  main.cpp  planning.cpp
src/bayes-adaptive/abstractions/: Abstraction.cpp  Abstraction.hpp
src/bayes-adaptive/models/: Domain_Size.hpp
src/bayes-adaptive/priors/: BAPOMDPPrior.cpp  BAPOMDPPrior.hpp  BAPrior.hpp  FBAPOMDPPrior.cpp  FBAPOMDPPrior.hpp
src/bayes-adaptive/states/: BAState.cpp  BAState.hpp
src/beliefs/: Belief.cpp  Belief.hpp
src/beliefs/bayes-adaptive/: BABelief.cpp  BABelief.hpp  BAImportanceSampling.cpp  BAImportanceSampling.hpp  BAPointEstimation.cpp  BAPointEstimation.hpp  BARejectionSampling.cpp  BARejectionSampling.hpp  NestedBelief.cpp  NestedBelief.hpp
src/beliefs/particle_filters/: FlatFilter.cpp  FlatFilter.hpp  ImportanceSampler.cpp  ImportanceSampler.hpp  RejectionSampling.cpp  RejectionSampling.hpp  WeightedFilter.cpp  WeightedFilter.hpp  WeightedParticle.hpp
src/beliefs/point_estimation/: PointEstimation.cpp  PointEstimation.hpp
src/configurations/: ArgumentParser.cpp  ArgumentParser.hpp  BAConf.cpp  BAConf.hpp  BeliefConf.cpp  BeliefConf.hpp  Conf.cpp  Conf.hpp  DomainConf.cpp  DomainConf.hpp  FBAConf.cpp  FBAConf.hpp  PlannerConf.cpp  PlannerConf.hpp
src/domains/: POMDP.cpp  POMDP.hpp
src/domains/agr/: AGR.cpp  AGR.hpp
src/domains/coffee/: CoffeeProblem.cpp  CoffeeProblem.hpp  CoffeeProblemAction.cpp  CoffeeProblemAction.hpp  CoffeeProblemIndices.hpp  CoffeeProblemObservation.cpp  CoffeeProblemObservation.hpp  CoffeeProblemState.cpp  CoffeeProblemState.hpp
src/domains/collision-avoidance/: CollisionAvoidance.cpp  CollisionAvoidance.hpp  CollisionAvoidanceBAExtension.cpp  CollisionAvoidanceBAExtension.hpp  CollisionAvoidanceFBAExtension.cpp  CollisionAvoidanceFBAExtension.hpp  CollisionAvoidancePriors.cpp  CollisionAvoidancePriors.hpp
src/domains/collision-avoidance-big/: CollisionAvoidanceBig.cpp  CollisionAvoidanceBig.hpp  CollisionAvoidanceBigAbstraction.cpp  CollisionAvoidanceBigAbstraction.hpp  CollisionAvoidanceBigBAExtension.cpp  CollisionAvoidanceBigBAExtension.hpp  CollisionAvoidanceBigFBAExtension.cpp  CollisionAvoidanceBigFBAExtension.hpp  CollisionAvoidanceBigPriors.cpp  CollisionAvoidanceBigPriors.hpp
src/domains/dummy/: DummyDomain.cpp  DummyDomain.hpp  DummyDomainBAExtension.cpp  DummyDomainBAExtension.hpp  DummyDomainPrior.hpp  FactoredDummyDomain.cpp  FactoredDummyDomain.hpp  FactoredDummyDomainBAExtension.cpp  FactoredDummyDomainBAExtension.hpp  FactoredDummyDomainFBAExtension.cpp  FactoredDummyDomainFBAExtension.hpp  FactoredDummyDomainPriors.cpp  FactoredDummyDomainPriors.hpp  LinearDummyDomain.cpp  LinearDummyDomain.hpp
src/domains/gridworld/: GridWorld.cpp  GridWorld.hpp  GridWorldBAExtension.cpp  GridWorldBAExtension.hpp  GridWorldBAPriors.cpp  GridWorldBAPriors.hpp  GridWorldFBAExtension.cpp  GridWorldFBAExtension.hpp
src/domains/gridworld-buttons/: GridWorldButtons.cpp  GridWorldButtons.hpp
src/domains/gridworld-coffee-trap/: GridWorldCoffee.cpp  GridWorldCoffee.hpp  GridWorldCoffeeBAExtension.cpp  GridWorldCoffeeBAExtension.hpp  GridWorldCoffeeBAPriors.cpp  GridWorldCoffeeBAPriors.hpp  GridWorldCoffeeFBAExtension.cpp  GridWorldCoffeeFBAExtension.hpp  GridWorldCoffeeFBAPriors.cpp  GridWorldCoffeeFBAPriors.hpp
src/domains/gridworld-coffee-trap-big/: GridWorldCoffeeBig.cpp  GridWorldCoffeeBig.hpp  GridWorldCoffeeBigAbstraction.cpp  GridWorldCoffeeBigAbstraction.hpp  GridWorldCoffeeBigBAExtension.cpp  GridWorldCoffeeBigBAExtension.hpp  GridWorldCoffeeBigBAPriors.cpp  GridWorldCoffeeBigBAPriors.hpp  GridWorldCoffeeBigFBAExtension.cpp  GridWorldCoffeeBigFBAExtension.hpp
src/domains/sysadmin/: SysAdmin.cpp  SysAdmin.hpp  SysAdminBAExtension.cpp  SysAdminBAExtension.hpp  SysAdminFBAExtension.cpp  SysAdminFBAExtension.hpp  SysAdminFactoredPrior.cpp  SysAdminFactoredPrior.hpp  SysAdminFlatPrior.cpp  SysAdminFlatPrior.hpp  SysAdminParameters.hpp  SysAdminState.cpp  SysAdminState.hpp
src/environment/: Action.hpp  Discount.cpp  Discount.hpp  Environment.cpp  Environment.hpp  History.cpp  History.hpp  Horizon.cpp  Horizon.hpp  Observation.hpp  Return.cpp  Return.hpp  Reward.cpp  Reward.hpp  State.hpp  Terminal.cpp  Terminal.hpp
src/experiments/: BAPOMDPExperiment.cpp  BAPOMDPExperiment.hpp  Episode.cpp  Episode.hpp  PlanningExperiment.cpp  PlanningExperiment.hpp
src/planners/: Planner.cpp  Planner.hpp
src/utils/: DiscreteSpace.hpp  Entropy.cpp  Entropy.hpp  IndexedElements.hpp  Statistic.cpp  Statistic.hpp  distributions.cpp  distributions.hpp  index.cpp  index.hpp  random.cpp  random.hpp  stl_utils.hpp
test/: .ycm_extra_conf.py  test.cpp
test/bayes-adaptive/: BAPOMDPStateTest.cpp  BAPOMDPTest.cpp
test/beliefs/: ImportanceSamplingTest.cpp  PointEstimationTest.cpp  RejectionSamplingTest.cpp
test/config/: ConfigTest.cpp
test/domains/: CoffeeProblemTest.cpp  CollisionAvoidanceTest.cpp  DummyDomainTest.cpp  FactoredDummyDomainTest.cpp  GridWorldCoffeeTest.cpp  GridWorldTest.cpp  SysAdminTest.cpp  TigerTest.cpp
test/environment/: BasicTest.cpp
test/utils/: StatisticTest.cpp  indexTest.cpp  randomTest.cpp
(+78 files in other folders)
